--- a/app/views/tabungans/show.html.erb
+++ b/app/views/tabungans/show.html.erb
@@ -1,4 +1,4 @@
-<br><div class="container" style="font-size: 20px;">
+<br><div style="font-size: 20px;">
 <% flash.each do |type, msg| %>
   <div id="flash">
   	<div class="alert alert-info">
@@ -8,99 +8,75 @@
 <% end %>
 	<a><b>Tujuan Nabung</b><a style="padding-left: 42px;">:</a> <%= @tabungan.tujuan_nabung %>,</a> 	<a><b>Target Dana</b> : <%= @tabungan.format2 %></a><br>
 	<a><b>Biaya Perbulan</b> <a style="padding-left: 36px;">:</a> <%= @tabungan.format %><br></a>
-	<a><b>Tempo</b> <a style="padding-left: 117px;">:</a> <%= @tabungan.tempo %> Bulan <a>=> <%= @tabungan.tempo.fdiv(12).round(1) %> Tahun</a><br></a>	
-	<a><b>Range Bunga</b> <a style="padding-left: 53px;">:</a> <%= @tabungan.bunga.bunga %> <%= @tabungan.range_bunga %>%<br></a>
+	<a><b>Tempo</b> <a style="padding-left: 117px;">:</a> <%= @tabungan.tempo %> Bulan <a>/ <%= @tabungan.tempo.fdiv(12).round(1)+0.1 %> Tahun</a><br></a>	
+	<a><b>Range Bunga</b> <a style="padding-left: 53px;">:</a> <%= @tabungan.bunga.bunga %> <%= @tabungan.bunga.range_bunga %>%<br></a>
 	<a><b>Saldo Awal</b> <a style="padding-left: 77px;">:</a> <%= @tabungan.format %><br></a>
 	<a><b>Biaya Admin</b><a style="padding-left: 67px;">:</a> Rp. 5.000</a><br>
-	<a><b>Awal Mulai Nabung</b> : <%= @tabungan.awal_nabung %><br></a><br><br>
+	<a><b>Awal Mulai Nabung</b> : <%= @tabungan.awal_nabung %><br></a>
 </div>
-
-<table class="table table-hover">
+<%= render 'layouts/header' %>
+<div class="table-responsive">	    	
+	<table class="table">
+	  <% i = 0 %>
+	  <% a = 0 %>
+	  <% b = @tabungan.biaya_perbulan+@tabungan.biaya_perbulan-5000 %>
+	  <% c = (b/100)*@tabungan.bunga.range_bunga %>
+	  <% d = ((c/100.to_f)*10).round(1) %>
 	  <thead>
 	    <tr>
-	      <th scope="col">Tahun 1</th>
-	      <th scope="col"></th>
+	  		<% @tabungan.dates.in_groups_of(12, false) do |row_task| %>
+	  		<% row_task[0].each do |qwe| %>
+	      		<th scope="col">Tahun <%= qwe.strftime("%Y") %></th>
+	  	  			<% for task in row_task %>
+	      				<th><%= task.first.strftime("%d:%b:%Y") %></th>
+	      			<% end %>
+	      			<td>total</td>
 	    </tr>
 	  </thead>
 	  <tbody>
 	    <tr>
 	      <th scope="row">Saldo Awal</th>
-	      <td><%= @tabungan.format %></td>
-	      <td>Otto</td>
-	      <td>@mdo</td>
-	      <td>Mark</td>
-	      <td>Otto</td>
-	      <td>@mdo</td>
-	      <td>Mark</td>
-	      <td>Otto</td>
-	      <td>@mdo</td>
-	      <td>Mark</td>
-	      <td>Otto</td>
-	      <td>@mdo</td>
+	      <% for l in row_task %>
+	      <td><%= number_to_currency(saldo_awal = a+=@tabungan.biaya_perbulan, unit: "Rp. ", separator: ",", delimiter: ".") %></td>
+	      <% end %>
+	      <td><%= number_to_currency(saldo_awal, unit: "Rp. ", separator: ",", delimiter: ".") %></td>
 	    </tr>
 
 	    <tr>
 	      <th scope="row">Admin</th>
-	      <td>0</td>
-	      <td>Otto</td>
-	      <td>@mdo</td>
-	      <td>Mark</td>
-	      <td>Otto</td>
-	      <td>@mdo</td>
-	      <td>Mark</td>
-	      <td>Otto</td>
-	      <td>@mdo</td>
-	      <td>Mark</td>
-	      <td>Otto</td>
-	      <td>@mdo</td>
+	      <% for i in row_task do %>
+	      <td>Rp. 5.000,00</td>
+	      <% end %>
+	      <td><%= number_to_currency(admin = 5000*row_task.count, unit: "Rp. ", separator: ",", delimiter: ".")%></td>
 	    </tr>
 
 	    <tr>
-	      <th scope="row">Bunga</th>
-	      <td>0</td>
-	      <td>Otto</td>
-	      <td>@mdo</td>
-	      <td>Mark</td>
-	      <td>Otto</td>
-	      <td>@mdo</td>
-	      <td>Mark</td>
-	      <td>Otto</td>
-	      <td>@mdo</td>
-	      <td>Mark</td>
-	      <td>Otto</td>
-	      <td>@mdo</td>
+	      <th scope="row">Bunga <%= @tabungan.bunga.range_bunga %>%</th>
+	      <% for u in row_task do %>
+	      <td><%= number_to_currency(c, unit: "Rp. ", separator: ",", delimiter: ".") %></td>
+	      <% end %>
+	      <td><%= number_to_currency(bunga = c*row_task.count, unit: "Rp. ", separator: ",", delimiter: ".") %></td>
 	    </tr>
 
 	    <tr>
-	      <th scope="row">Pajak</th>
-	      <td>0</td>
-	      <td>Otto</td>
-	      <td>@mdo</td>
-	      <td>Mark</td>
-	      <td>Otto</td>
-	      <td>@mdo</td>
-	      <td>Mark</td>
-	      <td>Otto</td>
-	      <td>@mdo</td>
-	      <td>Mark</td>
-	      <td>Otto</td>
-	      <td>@mdo</td>
+	      <th scope="row">Pajak 10%</th>
+	      <% for j in row_task do %>
+	      <td><%= number_to_currency(d, unit: "Rp. ", separator: ",", delimiter: ".")%></td>
+	      <% end %>
+	      <td><%= number_to_currency(pajak = d*row_task.count, unit: "Rp. ", separator: ",", delimiter: ".")%></td>
 	    </tr>
 
 	    <tr>
 	      <th scope="row">Setoran</th>
+	      <% for k in row_task do  %>
 	      <td><%= @tabungan.format %></td>
-	      <td>Otto</td>
-	      <td>@mdo</td>
-	      <td>Mark</td>
-	      <td>Otto</td>
-	      <td>@mdo</td>
-	      <td>Mark</td>
-	      <td>Otto</td>
-	      <td>@mdo</td>
-	      <td>Mark</td>
-	      <td>Otto</td>
-	      <td>@mdo</td>
+	      <% end %>
+	      <td><%= number_to_currency(saldo_awal-admin+bunga-pajak, unit: "Rp. ", separator: ",", delimiter: ".")%></td>
 	    </tr>
 	  </tbody>
+	      		<% end %>
+	      	<% end %>
 	</table>
+	<h4>Note! Bunga didapat dari biaya perbulan dari bulan kedua - admin *<%=@tabungan.bunga.range_bunga%>%</h4>
+	<h4>Note! Pajak didapat dari Bunga * 10%</h4>
+</div><br>
